[gd_scene load_steps=4 format=3 uid="uid://dftete5w84eyo"]

[ext_resource type="Script" path="res://Scripts/kill_zone.gd" id="1_7n3op"]
[ext_resource type="AudioStream" uid="uid://btaa2sy4dqutb" path="res://Assets/sounds/hurt.wav" id="2_3rxes"]
[ext_resource type="AudioStream" uid="uid://csyp3cwfqmwsm" path="res://Assets/sounds/GameOver.wav" id="3_jn7l6"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7n3op")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3rxes")
max_distance = 7600.0
bus = &"soundEffects"

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jn7l6")
max_distance = 7600.0
bus = &"gameOver"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
